# QShell

./: CMakeLists.txt  LICENSE  README.md
includes/: ProcessManager.h  QShellUI.h
resources/: styles.qss
src/: ProcessManager.cpp  QShellUI.cpp  main.cpp
